[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skip-hire-ai-mcp"
readme = "README.md"
version = "1.0.4"
description = "UK Waste Carrier Registration, EA waste codes, hazardous waste consignment notes for skip hire and waste transport operators."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["skip-hire", "waste-carrier", "environment-agency", "waste-codes", "hazardous-waste", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/skip-hire-ai-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
skip-hire-ai-mcp = "server:main"
